examples/test/testpolicy16510.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16510
  namespace: namespace367
spec:
  podSelector:
    matchLabels:
      key37: value17
      key45: value31
      key49: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value20
          key45: value29
          key23: value37
